// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Subnet form component renders the adding form variant 1`] = `
<div>
  <form
    class="cds--form form-0-2-3 form-react"
    novalidate=""
  >
    <div
      class="cds--form-item"
    >
      <div
        class="cds--select"
      >
        <label
          class="cds--label"
          dir="auto"
          for="ems_id"
        >
          <span
            aria-hidden="true"
            class="ddorg__carbon-component-mapper_is-required isRequired-0-2-4"
          >
            *
          </span>
          Network Manager
        </label>
        <div
          class="cds--select-input__wrapper"
        >
          <select
            class="cds--select-input"
            id="ems_id"
            name="ems_id"
            title=""
          >
            <option
              class="cds--select-option"
              label="<Choose>"
              value="-1"
            >
              &lt;Choose&gt;
            </option>
            <option
              class="cds--select-option"
              label="foo"
              value="1"
            >
              foo
            </option>
          </select>
          <svg
            aria-hidden="true"
            class="cds--select__arrow"
            fill="currentColor"
            focusable="false"
            height="16"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
            />
          </svg>
          
        </div>
      </div>
    </div>
    <div
      class="cds--btn-set"
    >
      <button
        class="cds--btn cds--btn--primary cds--btn--disabled"
        disabled=""
        type="submit"
        variant="primary"
      >
        Add
      </button>
      <button
        class="cds--btn cds--btn--secondary"
        type="button"
      >
        Cancel
      </button>
    </div>
  </form>
</div>
`;

exports[`Subnet form component renders the editing form variant 1`] = `
<div>
  <form
    class="cds--form form-0-2-3 form-react"
    novalidate=""
  >
    <div
      class="cds--form-item"
    >
      <div
        class="cds--select cds--select--disabled"
      >
        <label
          class="cds--label cds--label--disabled"
          dir="auto"
          for="ems_id"
        >
          <span
            aria-hidden="true"
            class="ddorg__carbon-component-mapper_is-required isRequired-0-2-4"
          >
            *
          </span>
          Network Manager
        </label>
        <div
          class="cds--select-input__wrapper"
        >
          <select
            class="cds--select-input"
            disabled=""
            id="ems_id"
            name="ems_id"
            title=""
          >
            <option
              class="cds--select-option"
              label="<Choose>"
              value="-1"
            >
              &lt;Choose&gt;
            </option>
            <option
              class="cds--select-option"
              label="foo"
              value="1"
            >
              foo
            </option>
          </select>
          <svg
            aria-hidden="true"
            class="cds--select__arrow"
            fill="currentColor"
            focusable="false"
            height="16"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
            />
          </svg>
          
        </div>
      </div>
    </div>
    <div
      class="cds--form-item cds--text-input-wrapper"
    >
      <div
        class="cds--text-input__label-wrapper"
      >
        <label
          class="cds--label"
          dir="auto"
          for="name"
        >
          <span
            aria-hidden="true"
            class="ddorg__carbon-component-mapper_is-required isRequired-0-2-4"
          >
            *
          </span>
          Name
        </label>
      </div>
      <div
        class="cds--text-input__field-outer-wrapper"
      >
        <div
          class="cds--text-input__field-wrapper"
        >
          <input
            class="cds--text-input"
            id="name"
            name="name"
            type="text"
            value="foo"
          />
          
          <span
            aria-atomic="true"
            aria-live="assertive"
            class="cds--text-input__counter-alert"
            role="alert"
          />
        </div>
      </div>
    </div>
    <div
      class="cds--form-item cds--text-input-wrapper"
    >
      <div
        class="cds--text-input__label-wrapper"
      >
        <label
          class="cds--label cds--label--disabled"
          dir="auto"
          for="cidr"
        >
          <span
            aria-hidden="true"
            class="ddorg__carbon-component-mapper_is-required isRequired-0-2-4"
          >
            *
          </span>
          CIDR
        </label>
      </div>
      <div
        class="cds--text-input__field-outer-wrapper"
      >
        <div
          class="cds--text-input__field-wrapper"
        >
          <input
            class="cds--text-input"
            disabled=""
            id="cidr"
            name="cidr"
            type="text"
            value=""
          />
          
          <span
            aria-atomic="true"
            aria-live="assertive"
            class="cds--text-input__counter-alert"
            role="alert"
          />
        </div>
      </div>
    </div>
    <fieldset
      class="cds--fieldset formGroup-0-2-8"
    >
      <legend
        class="cds--label"
      >
        DNS Servers
      </legend>
      <div>
        None
        <div
          class="addContainer-0-2-6"
        >
          <button
            class="add-0-2-5 cds--btn cds--btn--sm cds--layout--size-sm cds--btn--primary"
            id="add-dns_nameservers"
            type="button"
          >
            Add
            <svg
              aria-hidden="true"
              class="cds--btn__icon"
              fill="currentColor"
              focusable="false"
              height="32"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 32 32"
              width="32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16,4c6.6,0,12,5.4,12,12s-5.4,12-12,12S4,22.6,4,16S9.4,4,16,4 M16,2C8.3,2,2,8.3,2,16s6.3,14,14,14s14-6.3,14-14 S23.7,2,16,2z"
              />
              <path
                d="M24 15 17 15 17 8 15 8 15 15 8 15 8 17 15 17 15 24 17 24 17 17 24 17z"
              />
            </svg>
          </button>
        </div>
      </div>
    </fieldset>
    <div
      class="cds--btn-set"
    >
      <button
        class="cds--btn cds--btn--primary cds--btn--disabled"
        disabled=""
        type="submit"
        variant="primary"
      >
        Save
      </button>
      <button
        class="cds--btn cds--btn--secondary cds--btn--disabled"
        disabled=""
        type="button"
      >
        Reset
      </button>
      <button
        class="cds--btn cds--btn--secondary"
        type="button"
      >
        Cancel
      </button>
    </div>
  </form>
</div>
`;
